--- a/index.html
+++ b/index.html
@@ -6,20 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LandingePage</title>
 
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
 
 <body>
 
-    <div class="container">
-
-<div class ="item"></div>
-<div class ="item"></div>
+<div class = "header-container" >
 
 
-    </div>
-  
-    
+<h1>Header</h1>
+
+        <ul>
+
+        <li><a href="#">Link1</a></li>
+        <li><a href="#">Link1</a></li>
+
+        
+</ul>
+
+
+
+
+
+
+
+
+</div>
+
+</div>
+
+
 </body>
+
 </html>
